Stone Group (CRUD) all api
